--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
@@ -13,6 +14,7 @@
     "babel-brunch": "6.0.6",
     "brunch": "2.10.7",
     "clean-css-brunch": "2.10.0",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.1.1"
   }
 }
